apps/sonarqube/sonarqube-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube-svc
spec:
  selector:
    app: sonarqube-app
  ports:
  - name: sonarqube-http
    port: 80
    targetPort: 9000
    protocol: TCP
